# STM32_SingularityLib

./: .gitignore  CMakeLists.txt  README.md  Version.h  cmake_install.cmake  compile_commands.json  version.config
DockerBuildScripts/: Dockerfile  d_clang_fmt.sh  d_clangd_srv.sh  d_cmake_build.sh  d_cmake_prep.sh
Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_it.h
Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  sysmem.c
